<resources>
    <string name="app_name">The Golden Chain</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dhikr_button">Dhikr</string>
    <string name="dhikr_button_text">Remembrance of God</string>
    <string name="qasida_button">Qasaid</string>
    <string name="lecture_button">Lectures</string>
    <string name="tariqa_button">Tariqa</string>
    <string name="title_activity_dhikr">DhikrActivity</string>
    <string name="action_logo">Logo</string>
    <string name="wird_button">Al Wird Ul \'Aam</string>
    <string name="hizb_button">Hizb ul Bahr</string>
    <string name="dalail_button">Dalail Al Khayrat</string>
    <string name="gendhikr_button">General Dhikr</string>
    <string name="title_activity_wird">WirdActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_splash">The Golden Chain</string>
    <string name="greetings">Greetings, may the peace and blessings of God be upon You!</string>
    <string name="wird_title">Al Wird ul \'Aam  The General Litany</string>
    <string name="wird_test">Test</string>
    <string name="title_activity_hizbbahractivity">hizbbahractivity</string>
    <string name="hizb_title">Hizb ul Bahr - The Litany of the Sea</string>
    <string name="nasr_title">Hizb ul Nasr - The Litany of Victory</string>
    <string name="yaqoutiya_title">Salaat al-Yaqoutiya - The Salutation of the Resplendent Sapphire</string>
    <string name="latif_title">Al-Latifiyya Dhikr - The Most Subtle</string>
    <string name="hasbunallah_title">HasbunAllāh Dhikr - Allāh is sufficient for us</string>
    <string-array name="timezone">
        <item> </item>
        <item>UTC±00:00 – London | Casablanca | Dublin </item>
        <item>UTC+01:00 – Madrid | Algiers | Copenhagen</item>
        <item>UTC+02:00 – Cairo | Damascus | Jerusalem</item>
        <item>UTC+03:00 – Kuwait City | Nairobi | Moscow</item>
        <item>UTC+04:00 – Abu Dhabi | Port Louis | Muscat</item>
        <item>UTC+05:00 – Kabul | Islamabad | Ashgabat</item>
        <item>UTC+06:00 – Dhaka | Thimphu | Bishkek</item>
        <item>UTC+07:00 – Jakarta | Bangkok | Hanoi</item>
        <item>UTC+08:00 – Beijing | Kuala Lumpur | Taipei</item>
        <item>UTC+09:00 – Tokyo | Seoul | Dili</item>
        <item>UTC+10:00 – Port Moresby</item>
        <item>UTC+11:00 – Palikir | Gizo | Port Vila</item>
        <item>UTC+12:00 – Suva | Majuro | Yaren</item>
        <item>UTC−01:00 – Praia | Azores</item>
        <item>UTC−02:00 – Brasilia | King Edward Point</item>
        <item>UTC−03:00 – Buenos Aires | Santiago | Nuuk</item>
        <item>UTC−04:00 – San Juan | Hamilton | Santo Domingo</item>
        <item>UTC−05:00 – Ottawa | Washington | Kinston </item>
        <item>UTC−06:00 – Guatemala | San Jose | Mexico City</item>
        <item>UTC−07:00 – Arizona | New Mexico | Utah</item>
        <item>UTC−08:00 – Adamstown | Nevada</item>
        <item>UTC−09:00 – Alaska </item>
        <item>UTC−10:00 – Rarotonga | Hawaii</item>
        <item>UTC−11:00 – Alofi   </item>
    </string-array>
    <string-array name="timezonevalues">
        <item>0</item>
        <item>UTC±00:00</item>
        <item>UTC+01:00</item>
        <item>UTC+02:00</item>
        <item>UTC+03:00</item>
        <item>UTC+04:00</item>
        <item>UTC+05:00</item>
        <item>UTC+06:00</item>
        <item>UTC+07:00</item>
        <item>UTC+08:00</item>
        <item>UTC+09:00</item>
        <item>UTC+10:00</item>
        <item>UTC+11:00</item>
        <item>UTC+12:00</item>
        <item>UTC−01:00</item>
        <item>UTC−02:00</item>
        <item>UTC−03:00</item>
        <item>UTC−04:00</item>
        <item>UTC−05:00</item>
        <item>UTC−06:00</item>
        <item>UTC−07:00</item>
        <item>UTC−08:00</item>
        <item>UTC−09:00</item>
        <item>UTC−10:00</item>
        <item>UTC−11:00</item>
    </string-array>
    <string-array name="wirdnumber">
        <item> Recite Once:</item>
        <item> Recite Once:</item>
        <item> Recite Once:</item>
        <item> Recite Ninety Nine Times:</item>
        <item> Recite Once:</item>
        <item> Recite Once:</item>
        <item> Recite Ninety Nine Times:</item>
        <item> Recite Once:</item>
        <item> Recite Once:</item>
        <item> Recite Ninety Nine Times:</item>
        <item> Recite Once:</item>
        <item> Recite Three Times</item>
        <item> Recite Once:</item>
        <item> </item>


    </string-array>
    <string-array name="wirdarabic">
        <item>
            أَعُوذُ بِاللهِ مِنَ الشَّيْطَانِ الرَّجِيم
</item>
        <item>
            بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيم
</item>
        <item>
            وَمَا تُقَدِّمُوا لِأَنْفُسِكُمْ مِنْ خَيْرٍ تَجِدُوهُ عِنْدَ اللهِ هُوَ خَيْراً وَأَعْظَمَ أَجْراً وَاسْتَغْفِرُوا اللهَ إِنَّ اللهَ غَفُورٌ رَّحِيم
</item>
        <item>
            أَسْتَغْفِرُ الله
</item>
        <item>
            أَسْتَغْفِرُ اللهَ الْعَظِيمَ الَّذِي لَا إِلَهَ إِلَّا هُوَ الْحَيَّ الْقَيُّومَ وَأَتُوبُ إِلَيْه
</item>
        <item>
            إِنَّ اللهَ وَمَلَآئِكَتَهُ يُصَلُّونَ عَلَى النَّبِيِّ يَا أَيُّهَا الَّذِينَ آمَنُوا صَلُّوا عَلَيْهِ وَسَلِّمُوا تَسْلِيماً
</item>
        <item>
            اَللَّهُمَّ صَلِّ عَلَى سَيِّدِنَا مُحَمَّدٍ عَبْدِكَ وَرَسُولِكَ النَّبِيِّ الْأُمِّيِّ وَعَلَى آلِهِ وَصَحْبِهِ وَسَلِّمْ
</item>
              <item>
                  اَللَّهُمَّ صَلِّ عَلَى سَيِّدِنَا مُحَمَّدٍ عَبْدِكَ وَرَسُولِكَ النَّبِيِّ الْأُمِّيِّ وَعَلَى آلِهِ وَصَحْبِهِ وَسَلِّمْ تَسْلِيماً بِقَدْرِ عَظَمَةِ ذَاتِكَ فِي كُلِّ وَقْتٍ وَّحِينٍ

              </item>
        <item>
            فَاعْلَمْ أَنَّهُ لَا إِلَهَ إِلَّا الله
</item>
        <item>
            لَا إِلهَ إِلَّا الله
</item>
        <item>
            لَا إِلَهَ إِلَّا الله سَيِّدُنَا مُحَمَّدٌ رَّسُولُ اللهِ صَلَّى اللهُ عَلَيْهِ وَعَلَى آلِهِ وَصَحْبِهِ وَسَلَّمَ
</item>
        <item>
            بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ.\nقُلْ هُوَ اللهُ أَحَدٌ.

            اللهُ الصَّمَدُ.

            لَمْ يَلِدْ وَلَمْ يُولَدْ.

            وَلَمْ يَكُنْ لَّهُ كُفُواً أَحَدٌ.
        </item>
        <item>
            بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيمِ.\nالْحَمْدُ لِلهِ رَبِّ الْعَالَمِينَ.

            الرَّحْمَنَّ الرَّحِيمِ.

            مَالِكِ يَوْمِ الدِّينِ.

            إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ.

            اهْدِنَا الصِّرَاطَ الْمُسْتَقِيمَ.

            صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ عَلَيْهِمْ وَلَا الضَّآلِّينَ.

            آمِين
        </item>
<item> </item>
    </string-array>
    <string-array name="wirdtransliteration">
        <item>A-`ūdhu billāhi minash-shaytā nir-rajīm

</item>
        <item>Bis-mil-lāhir rahmā nir-rahīm

</item>
        <item>
Wa mā tuqad-dimū li-anfusikum min khayrin tajidūhu `indal-lāhi huwa khayran wa a`a-zama ajrā was-tagh-firul-lāh innal-lāha ghafūrur-rahīm
</item>
        <item>
As-tagh-firul-lāh
</item>
        <item>
 As-tagh-firul-lāhal `azīmal-la-dhī la ilāha illā huwal hayyal qay-yūma wa atūbu ilayh
</item>
        <item>
In-nallāha wa malā-ikatahu yusallūna `alannabiy, yā ay-yuhal-ladhīna āmanū şallū `alayhi wa sallimū taslīmā
</item>
        <item>
Allāhumma şalli `alā sayyidinā muhammadin `abdika wa rasūlikan-nabi-yil-ummiy, wa `alā ālihi wa sahbihi wa sallim
</item>
        <item>
Allāhumma şalli `alā sayyidinaa muhammadin `abdika wa rasūlikan-nabi-yil-ummiy, wa `alā ālihi wa sahbihii wa sallim taslīman biqadri `ażamati dhātika fī kulli waqtin wa hīn
</item>
        <item>
Fa`lam annahu lā ilāha il-lal-lāh
</item>
        <item>
Lā ilāha il-lal-lāh
</item>
        <item>
        Lā ilāha il-lal-lāhu sayyidunā muhammadur rasūlul-lāh, şallal-lāhu `alayhi wa `alā ālihiwa sahbihi wa sallam</item>
        <item>
            Bismil-lāhir-rahmā-nir-rahīm,\nQul huwal-lāhu ahad,

Allāhuş-şamad,

Lam yalid wa lam yūlad,

Wa lam yakul-lahū kufuwan ahad.
</item>
        <item>
Bismil-lāhir-rahmā-nir rahīm,\nAlhamdu lil-lāhi rabbil-`ālamīn, Ar-rahmā-nirrahīm,
Māliki yawmid-dīn,
iy-yāka na`budu wa iyyāka nasta`īn, ih-dinaş-şirātal mustaqīm, Şirātal-ladhīna an`amta `alayhim, Ghayril magh-dūbi `alayhim wa lad-dāllīn.
Ameen.        </item>
      <item> </item>
    </string-array>
    <string-array name="wirdtranslation">
        <item>I seek refuge in Allāh from Shaytān, the rejected one.
</item>
        <item>In the Name of Allāh, Most Gracious, Most Merciful.</item>
        <item>
         <![CDATA[ <i> “And whatever good you send forth for yourselves, you shall find it with Allāh, better and greater in reward. And seek the forgiveness of Allāh, for Allāh is Oft-Forgiving, Most Merciful.”
           \n[Surah Al-Muzzammil, 73:20]</i>]]>
</item>
        <item>I seek the forgiveness of Allāh.
</item>
        <item>I seek the forgiveness of Allāh, the Most Great, other than whom there is no god, the Living, the Self-subsisting Supporter of all, and I turn to Him in Repentance.</item>
        <item>
           <![CDATA[ <i> <i> “Verily Allāh and His Angels send blessings on the Prophet: O you who believe, send blessings on him and salute him with all respect.”
            \n[Surah Al-Ahzab, 33:56]</i>]]>
</item>
        <item>O Allāh, bless our master Muhammad, Your Servant and Messenger, the Unlettered Prophet, and his family and companions, and grant them peace.</item>
        <item>O Allāh, bless our master Muhammad, Your Servant and Messenger, the Unlettered Prophet, and his family and companions, and grant them peace, as greatly as the greatness of Your Being, at every moment and time.
</item>
        <item>
        <![CDATA[ <i><i> “Know, therefore, that there is no god but Allāh.”
            \n[Surah Muhammad, 47:19]</i>]]> </item>
        <item>There is no god but Allāh.
</item>
        <item>There is no god but Allāh, our Master Muhammad is the Messenger of Allāh, may the blessings of Allāh be upon him and his family and his companions, and may He grant them peace.</item>
        <item>
            <![CDATA[<i> “Say: He is Allāh, the One; Allāh, the Eternal, Absolute; He begets not, nor is He begotten; And there is none like unto Him.”
             \n[Surah Al-Ikhlas, 112: 1-4]</i>]]>
</item>
        <item>   <![CDATA[ <i> In the Name of Allāh, Most Gracious, Most Merciful.
All Praise is for Allāh, Lord of the Worlds.
Most Gracious, Most Merciful.
Master of the Day of Judgement.
You (alone) we worship; And You (alone) we ask for help.
Guide us to the Straight Path.
The Path of those upon whom You Have bestowed Your Grace,
Not (the Path) of those who earn Your anger (wrath),
Nor of those who go astray.
 \n[Surah Al-Fatihah, 1:1-7]</i>]]></item>

        <item>Make Duā for yourself, your parents, your Shaykh, your fellow
brethren on this path, and all Muslims.</item>

    </string-array>
    <string name="reminder_title">Please select the Reminders that you wish to receive:</string>
    <string name="wird_morn">Wird ul Am - Morning</string>
    <string name="wird_eve">Wird ul Am - Evening</string>
    <string name="hizbbahrreminder">Hizb ul-Bahr - Afternoon</string>
    <string name="WirdMorning">\"WirdMorning\"</string>
    <string name="reminder_enable">Do you wish to enable reminders?</string>
</resources>