<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_background3"

    >
            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="3dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/customborder"
        android:paddingLeft="15dp"
        >
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/remindercheckbox1"
        android:text="@string/reminder_enable"
        android:textColor="@color/textview1"
        android:textSize="18sp"
        android:paddingLeft="15dp" />
    </RelativeLayout>


    <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding ="10dp"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:background="#ffffff"
                android:spinnerMode="dropdown"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/remindercontainer"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_title"
        android:textSize="18sp"
        android:paddingLeft ="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="#ffffff"
        android:background="@color/textview1"
        />
        <TextView
            android:id="@+id/parseid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WirdMorning"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:background="@color/textview1"
            />

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@drawable/customborder"
    android:paddingLeft="15dp"
    >
            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/checkbox1"
                android:text="@string/wird_morn"
                android:textColor="@color/textview1"
                android:textSize="18sp"
                android:paddingLeft="15dp"


                />
</RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/customborder"
                android:layout_marginTop="-1dp"
                android:paddingLeft="15dp"
                >

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/checkbox2"
                android:text="@string/wird_eve"
                android:textColor="@color/textview1"
                android:textSize="18sp"
                android:paddingLeft="15dp"
                />


                </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/customborder"
                android:layout_marginTop="-1dp"
                android:paddingLeft="15dp"
                >
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="15dp"
            android:id="@+id/checkbox3"
                android:text="@string/hizbbahrreminder"
                android:textColor="@color/textview1"
                android:textSize="18sp"

            />
            </RelativeLayout>
    </LinearLayout>
            </LinearLayout>

